Eversource now done, need to add eversource structure now

--- a/src/main/resources/assets/storymobs/lang/en_us.json
+++ b/src/main/resources/assets/storymobs/lang/en_us.json
@@ -1,5 +1,7 @@
 {
 	"itemGroup.storymobs" : "Story Mobs",
 	"item.storymobs.creeder_spawn_egg" : "Creeder Spawn Egg",
-	"entity.storymobs.creeder": "Creeder"
+	"item.storymobs.eversource_spawn_egg" : "Eversource Spawn Egg",
+	"entity.storymobs.creeder": "Creeder",
+	"entity.storymobs.eversource": "Eversource"
 }
